--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br>
     <a href="lev2_1-grid/index.html" target="_blank">lev2_1-grid</a>
     <br>
-    <a href="Aufgabe4/index.html" target="_blank">Aufgabe4</a>
+    <a href="lev3_3_css-vertiefung-grid/index.html" target="_blank">Grid Bonus lev3_3_css-vertiefung-grid</a>
     <br>
     <a href="Aufgabe5/index.html" target="_blank">Aufgabe5</a>
     <br>
